--- a/pom.xml
+++ b/pom.xml
@@ -11,20 +11,61 @@
 			<name>typesafe-releases</name>
 			<url>http://repo.typesafe.com/typesafe/repo</url>
 		</repository>
+		<repository>
+			<id>sonatype-oss</id>
+			<url>https://oss.sonatype.org/content/groups/public/</url>
+		</repository>
 	</repositories>
 
+	<properties>
+		<scala.version>2.10</scala.version>
+	</properties>
+
 	<dependencies>
+
+		<!-- joda time -->
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.scalaj</groupId>
-			<artifactId>scalaj-http_2.9.2</artifactId>
+			<artifactId>scalaj-time_2.10.0-M7</artifactId>
+			<!-- <artifactId>scalaj-time_${scala.version}</artifactId> -->
+			<version>0.6</version>
+		</dependency>
+
+		<!-- testing -->
+
+		<dependency>
+			<groupId>org.scalatest</groupId>
+			<artifactId>scalatest_2.10.0</artifactId>
+			<version>2.0.M5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scalacheck</groupId>
+			<artifactId>scalacheck_2.10.0</artifactId>
+			<version>1.10.0</version>
+			<optional>true</optional>
+		</dependency>
+
+		<!-- REST -->
+
+		<dependency>
+			<groupId>org.scalaj</groupId>
+			<artifactId>scalaj-http_${scala.version}</artifactId>
 			<version>0.3.6</version>
 		</dependency>
-		<!-- <dependency> <groupId>com.googlecode.soundlibs</groupId> <artifactId>jlayer</artifactId> 
-			<version>1.0.1-1</version> </dependency> -->
+
+		<!-- text to speech -->
+
 		<dependency>
 			<groupId>com.googlecode.soundlibs</groupId>
-			<artifactId>mp3spi</artifactId>
-			<version>1.9.5-1</version>
+			<artifactId>jlayer</artifactId>
+			<version>1.0.1-1</version>
 		</dependency>
 	</dependencies>
 
