--- a/pom.xml
+++ b/pom.xml
@@ -18,55 +18,62 @@
 	</repositories>
 
 	<properties>
-<!-- 		<scala.version>2.10</scala.version> -->
+		<!-- <scala.version>2.10</scala.version> -->
 		<scala.version>2.9.2</scala.version>
 	</properties>
 
 	<dependencies>
 
-		<!-- joda time -->
-
 		<dependency>
+			<!-- joda time -->
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.2</version>
 		</dependency>
 
 		<dependency>
+			<!-- scala facade for joda time -->
 			<groupId>org.scalaj</groupId>
 			<artifactId>scalaj-time_${scala.version}</artifactId>
 			<!-- <artifactId>scalaj-time_${scala.version}</artifactId> -->
 			<version>0.6</version>
 		</dependency>
 
-		<!-- testing -->
-
 		<dependency>
+			<!-- scala testing -->
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_${scala.version}</artifactId>
 			<version>2.0.M5</version>
 		</dependency>
+
 		<dependency>
+			<!-- scala testing -->
 			<groupId>org.scalacheck</groupId>
 			<artifactId>scalacheck_${scala.version}</artifactId>
 			<version>1.10.0</version>
 			<optional>true</optional>
 		</dependency>
 
-		<!-- REST -->
-
 		<dependency>
+			<!-- REST -->
 			<groupId>org.scalaj</groupId>
 			<artifactId>scalaj-http_${scala.version}</artifactId>
 			<version>0.3.6</version>
 		</dependency>
 
-		<!-- text to speech -->
-
 		<dependency>
+			<!-- text to speech -->
 			<groupId>com.googlecode.soundlibs</groupId>
 			<artifactId>jlayer</artifactId>
 			<version>1.0.1-1</version>
+		</dependency>
+
+		<dependency>
+			<!-- java api for bytecode -->
+			<!-- needed for sexpressions -->
+			<groupId>me.qmx.jitescript</groupId>
+			<artifactId>jitescript</artifactId>
+			<version>0.3.0</version>
 		</dependency>
 	</dependencies>
 
