--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,39 @@
 			<artifactId>jitescript</artifactId>
 			<version>0.3.0</version>
 		</dependency>
+
 	</dependencies>
 
+	<build>
+		<sourceDirectory>src/main/scala</sourceDirectory>
+		<testSourceDirectory>src/test/scala</testSourceDirectory>
+		<plugins>
+
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<version>3.1.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<jvmArgs>
+						<jvmArg>-Xms64m</jvmArg>
+						<jvmArg>-Xmx1024m</jvmArg>
+					</jvmArgs>
+					<launchers>
+						<launcher>
+							<id>train-date</id>
+							<mainClass>trainer.datetime.DateTrainingsLoop</mainClass>
+						</launcher>
+					</launchers>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
