--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 	</repositories>
 
 	<properties>
-		<!-- <scala.version>2.10</scala.version> -->
-		<scala.version>2.9.2</scala.version>
+		<scala.version>2.10</scala.version>
+		<!-- <scala.version>2.9.2</scala.version> -->
 	</properties>
 
 	<dependencies>
@@ -34,8 +34,8 @@
 		<dependency>
 			<!-- scala facade for joda time -->
 			<groupId>org.scalaj</groupId>
-			<artifactId>scalaj-time_${scala.version}</artifactId>
 			<!-- <artifactId>scalaj-time_${scala.version}</artifactId> -->
+			<artifactId>scalaj-time_2.10.0-M7</artifactId>
 			<version>0.6</version>
 		</dependency>
 
@@ -43,7 +43,7 @@
 			<!-- scala testing -->
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_${scala.version}</artifactId>
-			<version>2.0.M5</version>
+			<version>2.0.M6-SNAP13</version>
 		</dependency>
 
 		<dependency>
@@ -74,6 +74,13 @@
 			<groupId>me.qmx.jitescript</groupId>
 			<artifactId>jitescript</artifactId>
 			<version>0.3.0</version>
+		</dependency>
+
+		<dependency>
+			<!-- persistenc -->
+			<groupId>org.squeryl</groupId>
+			<artifactId>squeryl_2.10</artifactId>
+			<version>0.9.5-6</version>
 		</dependency>
 
 	</dependencies>
