--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 			<!-- REST -->
 			<groupId>org.scalaj</groupId>
 			<artifactId>scalaj-http_${scala.version}</artifactId>
-			<version>0.3.6</version>
+			<version>0.3.7</version>
 		</dependency>
 
 		<dependency>
@@ -77,10 +77,17 @@
 		</dependency>
 
 		<dependency>
-			<!-- persistenc -->
+			<!-- persistence -->
 			<groupId>org.squeryl</groupId>
 			<artifactId>squeryl_2.10</artifactId>
 			<version>0.9.5-6</version>
+		</dependency>
+
+		<dependency>
+			<!-- wordnet -->
+			<groupId>net.sf.jwordnet</groupId>
+			<artifactId>jwnl</artifactId>
+			<version>1.4_rc3</version>
 		</dependency>
 
 	</dependencies>
